--- a/index.html
+++ b/index.html
@@ -16,17 +16,22 @@
   </head>
   <body>
     <!--HEADER-->
-    <header>
+    <header class="header">
       <div class="container">
         <nav class="navigation">
-          <a
-            class="logo"
+          <a class="logo"
             href="./index.html"
             lang="en"
             aria-label="логотип вэбстудии"
             ><span style="color: #2196f3">Web</span
             ><span style="color: black">Studio</span>
           </a>
+          <button type="button" class="menu-btn" data-menu-button aria-label="Переключатель мобильного меню">
+            <svg width=24 height=16>
+              <use class="icon-cross" href="./images/sprite.svg#icon-cross"></use>
+              <use class="icon-burger" href="./images/sprite.svg#icon-burger-btn"></use>
+            </svg>
+          </button>
           <ul class="navigation-list">
             <li class="navigation-list-item">
               <a class="header-nav-link current" href="./index.html">Студия</a>
@@ -423,7 +428,7 @@
       </section>
     </main>
     <!--FOOTER-->
-    <footer>
+    <footer class="footer">
       <div class="container">
         <div class="footer-container">
           <div class="footer-contacts">
@@ -581,5 +586,6 @@
     </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
