--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 
 <body>
   <!--HEADER-->
-  <header>
+  <header class="header">
     <div class="container">
       <nav class="navigation">
         <a class="logo" href="./index.html" lang="en" aria-label="логотип вэбстудии"><span
@@ -270,7 +270,7 @@
     </section>
   </main>
   <!--FOOTER-->
-    <footer>
+    <footer class="footer">
       <div class="container">
         <div class="footer-container">
           <div class="footer-contacts">
