--- a/index.html
+++ b/index.html
@@ -51,24 +51,23 @@
             </ul>
         
             <address>
-          <ul>
-            <li class="address-item">
-              <a class="header-contact-item" href="mailto:info@devstudio.com">
-                <svg class="icon-envelope" width="16" height="12">
-                  <use href="./images/sprite.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com</a
-              >
-            </li>
-            <li class="address-item">
-              <a class="header-contact-item" href="tel:+380961111111">
-                <svg class="icon-envelope" width="10" height="16">
-                  <use href="./images/sprite.svg#icon-smartphone"></use>
-                </svg>
-                +38 096 111 11 11</a
-              >
-            </li>
-          </ul>
+              <ul class="contact-items-list">
+                <li class="address-item">
+                  <a class="header-contact-item" href="mailto:info@devstudio.com">
+                    <svg class="icon-envelope" width="16" height="12">
+                      <use href="./images/sprite.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com
+                  </a>
+                </li>
+                <li class="address-item">
+                  <a class="header-contact-item" href="tel:+380961111111">
+                    <svg class="icon-envelope" width="10" height="16">
+                      <use href="./images/sprite.svg#icon-smartphone"></use>
+                    </svg>
+                    +38 096 111 11 11</a>
+                </li>
+              </ul>
             </address>
         </div>
       </div>
