--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             aria-expanded="false"
           >
             <svg 
-              width=24
-              height=16
+              width="24"
+              height="16"
               aria-label="Переключатель мобильного меню"            
             >
               <use class="icon-cross" href="./images/sprite.svg#icon-cross"></use>
@@ -51,17 +51,17 @@
             </ul>
         
             <address>
-              <ul class="contact-items-list">
-                <li class="address-item">
-                  <a class="header-contact-item" href="mailto:info@devstudio.com">
+              <ul class="contact-list">
+                <li class="contact-list-item">
+                  <a class="contact-list-link" href="mailto:info@devstudio.com">
                     <svg class="icon-envelope" width="16" height="12">
                       <use href="./images/sprite.svg#icon-envelope"></use>
                     </svg>
                     info@devstudio.com
                   </a>
                 </li>
-                <li class="address-item">
-                  <a class="header-contact-item" href="tel:+380961111111">
+                <li class="contact-list-item">
+                  <a class="contact-list-link" href="tel:+380961111111">
                     <svg class="icon-envelope" width="10" height="16">
                       <use href="./images/sprite.svg#icon-smartphone"></use>
                     </svg>
