--- a/portfolio.html
+++ b/portfolio.html
@@ -13,44 +13,53 @@
 
 <body>
   <!--HEADER-->
-  <header class="header">
-    <div class="container">
-      <nav class="navigation">
+    <header class="header">
+      <div class="container">
         <a class="logo" href="./index.html" lang="en" aria-label="логотип вэбстудии"><span
             style="color: #2196f3">Web</span><span style="color: black">Studio</span>
         </a>
-        <ul class="navigation-list">
-          <li class="navigation-list-item">
-            <a class="header-nav-link" href="./index.html">Студия</a>
-          </li>
-          <li class="navigation-list-item">
-            <a class="header-nav-link current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="navigation-list-item">
-            <a class="header-nav-link" href="">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li class="address-item">
-            <a class="header-contact-item" href="mailto:info@devstudio.com">
-              <svg class="icon-envelope" width="16" height="12">
-                <use href="./images/sprite.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com</a>
-          </li>
-          <li class="address-item">
-            <a class="header-contact-item" href="tel:+380961111111">
-              <svg class="icon-envelope" width="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
-    </div>
-  </header>
+        <!-- <nav class="navigation"> -->
+        <button type="button" class="mobile-menu-btn" data-menu-button aria-expanded="false">
+          <svg width="24" height="16" aria-label="Переключатель мобильного меню">
+            <use class="icon-cross" href="./images/sprite.svg#icon-cross"></use>
+            <use class="icon-burger" href="./images/sprite.svg#icon-burger-btn"></use>
+          </svg>
+        </button>
+        <div class="menu-container" data-menu>
+          <ul class="navigation-list">
+            <li class="navigation-list-item">
+              <a class="header-nav-link" href="./index.html">Студия</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="header-nav-link current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="header-nav-link" href="">Контакты</a>
+            </li>
+          </ul>
+    
+          <address>
+            <ul class="contact-list">
+              <li class="contact-list-item">
+                <a class="contact-list-link" href="mailto:info@devstudio.com">
+                  <svg class="icon-envelope" width="16" height="12">
+                    <use href="./images/sprite.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="contact-list-item">
+                <a class="contact-list-link" href="tel:+380961111111">
+                  <svg class="icon-envelope" width="10" height="16">
+                    <use href="./images/sprite.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
+    </header>
   <main>
     <!--PROJECTS-->
     <section class="projects">
