Adds adaptivity to hero

--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!--HEADER-->
+    <!-- HEADER -->
     <header class="header">
       <div class="container">
         <a class="logo" href="./index.html" lang="en" aria-label="логотип вэбстудии"><span
             style="color: #2196f3">Web</span><span style="color: black">Studio</span>
         </a>
-        <!-- <nav class="navigation"> -->
           <button 
             type="button" 
             class="mobile-menu-btn" 
@@ -77,7 +76,7 @@
       <section class="section hero">
         <div class="container">
           <div class="hero-items">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
             <button class="hero-btn" type="button" data-modal-open>
               Заказать услугу
             </button>
@@ -85,7 +84,7 @@
         </div>
       </section>
       <!--FEATURES-->
-      <section class="section no-bottom-padding">
+      <!-- <section class="section no-bottom-padding">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="features-list">
@@ -119,7 +118,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--What we do-->
       <!-- <section class="section">
         <div class="container">
@@ -156,7 +155,7 @@
         </div>
       </section> -->
       <!--TEAM-->
-      <section class="section team">
+      <!-- <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list">
@@ -386,9 +385,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--CLIENTS-->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="clients-list">
@@ -431,10 +430,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!--FOOTER-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-container">
           <div class="footer-contacts">
@@ -527,10 +526,10 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
 <!-- MODAL WINDOW --> 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-btn" data-modal-close>
           <svg width="18" height="18">
@@ -590,7 +589,7 @@
           </form>
       </div>
     </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
   </body>
