Adds adaptivity to modal window

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
     </footer> -->
 
 <!-- MODAL WINDOW --> 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-btn" data-modal-close>
           <svg width="18" height="18">
@@ -589,7 +589,7 @@
           </form>
       </div>
     </div>
-    </div> -->
+    </div>
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
   </body>
