--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
       </section>
       <!--FEATURES-->
-      <!-- <section class="section no-bottom-padding">
+      <section class="section no-bottom-padding">
         <div class="container">
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="features-list">
@@ -118,7 +118,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--What we do-->
       <!-- <section class="section">
         <div class="container">
