Adds adaptivity to whatwedo section

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
       </section>
       <!--What we do-->
-      <!-- <section class="section">
+      <section class="section whatwedo">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="what-we-do-list">
@@ -153,7 +153,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--TEAM-->
       <!-- <section class="section team">
         <div class="container">
