--- a/index.html
+++ b/index.html
@@ -125,30 +125,41 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="what-we-do-list">
             <li class="what-we-do-card">
-              <img
-                src="./images/img-services-1.jpg"
-                width="370"
-                height="294"
-                alt="Рабочий стол с компьютером, планшетом и нарисованной схемой"
-              />
+              <picture>
+                <source
+                srcset="./images/whatwedo/whatwedo-desktop-1.webp 1x, ./images/whatwedo/whatwedo-desktop-1@2x.webp 2x"
+                 type="image/webp"/>
+                <source
+                srcset="./images/whatwedo/whatwedo-desktop-1.jpg 1x, ./image/whatwedo/whatwedo-desktop-1@2x.jpg 2x"
+                />
+                <img src="./images/whatwedo/whatwedo-desktop-1.jpg" 
+                  width="370" height="294" 
+                  alt="Крупный план программист работает за компьютером" />
+              </picture>
               <h3 class="whatwedo-title">Десктопные приложения</h3>
             </li>
             <li class="what-we-do-card">
-              <img
-                src="./images/img-services-2.jpg"
-                width="370"
-                height="294"
-                alt="Ноутбук и мобильный телефон"
-              />
+              <picture>
+                <source srcset="./images/whatwedo/whatwedo-desktop-2.webp 1x, ./images/whatwedo/whatwedo-desktop-2@2x.webp 2x"
+                  media="(min-width: 1200px)" type="image/webp">
+                <source srcset="./images/whatwedo/whatwedo-desktop-2.jpg 1x, ./image/whatwedo/whatwedo-desktop-2@2x.jpg 2x"
+                  media="(min-width: 1200px)">
+                <img src="./images/whatwedo/whatwedo-desktop-2.jpg" 
+                  width="370" height="294" 
+                  alt="Ноутбук и мобильный телефон" />
+              </picture>
               <h3 class="whatwedo-title">Мобильные приложения</h3>
             </li>
             <li class="what-we-do-card">
-              <img
-                src="./images/img-services-3.jpg"
-                width="370"
-                height="294"
-                alt="Человек рисует на планшете"
-              />
+              <picture>
+                <source srcset="./images/whatwedo/whatwedo-desktop-3.webp 1x, ./images/whatwedo/whatwedo-desktop-3@2x.webp 2x"
+                  media="(min-width: 1200px)" type="image/webp">
+                <source srcset="./images/whatwedo/whatwedo-desktop-3.jpg 1x, ./image/whatwedo/whatwedo-desktop-3@2x.jpg 2x"
+                  media="(min-width: 1200px)">
+                <img src="./images/whatwedo/whatwedo-desktop-3.jpg" 
+                width="370" height="294" 
+                alt="Человек рисует на планшете" />
+ 
               <h3 class="whatwedo-title">Дизайнерские решения</h3>
             </li>
           </ul>
