--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
             <li class="what-we-do-card">
               <picture>
                 <source
-                srcset="../images/whatwedo/whatwedo-desktop-1.webp 1x, ../images/whatwedo/whatwedo-desktop-1@2x.webp 2x"
+                srcset="./images/whatwedo/whatwedo-desktop-1.webp 1x, ./images/whatwedo/whatwedo-desktop-1@2x.webp 2x"
                  type="image/webp"/>
                 <source
-                srcset="../images/whatwedo/whatwedo-desktop-1.jpg 1x, ../image/whatwedo/whatwedo-desktop-1@2x.jpg 2x"
+                srcset="./images/whatwedo/whatwedo-desktop-1.jpg 1x, ./image/whatwedo/whatwedo-desktop-1@2x.jpg 2x"
                 />
-                <img src="../images/whatwedo/whatwedo-desktop-1.jpg" 
+                <img src="./images/whatwedo/whatwedo-desktop-1.jpg" 
                   width="370" height="294" 
                   alt="Крупный план программист работает за компьютером" />
               </picture>
