--- a/index.html
+++ b/index.html
@@ -127,10 +127,12 @@
             <li class="what-we-do-card">
               <picture>
                 <source
-                srcset="./images/whatwedo/whatwedo-desktop-1.webp 1x, ./images/whatwedo/whatwedo-desktop-1@2x.webp 2x"
+                srcset="./images/whatwedo/whatwedo-desktop-1.webp 1x, 
+                ./images/whatwedo/whatwedo-desktop-1@2x.webp 2x"
                  type="image/webp"/>
                 <source
-                srcset="./images/whatwedo/whatwedo-desktop-1.jpg 1x, ./images/whatwedo/whatwedo-desktop-1@2x.jpg 2x"
+                srcset="./images/whatwedo/whatwedo-desktop-1.jpg 1x, 
+                ./images/whatwedo/whatwedo-desktop-1@2x.jpg 2x"
                 />
                 <img src="./images/whatwedo/whatwedo-desktop-1.jpg" 
                   width="370" height="294" 
@@ -140,9 +142,11 @@
             </li>
             <li class="what-we-do-card">
               <picture>
-                <source srcset="./images/whatwedo/whatwedo-desktop-2.webp 1x, ./images/whatwedo/whatwedo-desktop-2@2x.webp 2x"
-                  media="(min-width: 1200px)" type="image/webp">
-                <source srcset="./images/whatwedo/whatwedo-desktop-2.jpg 1x, ./images/whatwedo/whatwedo-desktop-2@2x.jpg 2x"
+                <source srcset="./images/whatwedo/whatwedo-desktop-2.webp 1x, 
+                ./images/whatwedo/whatwedo-desktop-2@2x.webp 2x"
+                  media="(min-width: 1200px)" type="image/webp"/>
+                <source srcset="./images/whatwedo/whatwedo-desktop-2.jpg 1x, 
+                ./images/whatwedo/whatwedo-desktop-2@2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <img src="./images/whatwedo/whatwedo-desktop-2.jpg" 
                   width="370" height="294" 
@@ -152,9 +156,11 @@
             </li>
             <li class="what-we-do-card">
               <picture>
-                <source srcset="./images/whatwedo/whatwedo-desktop-3.webp 1x, ./images/whatwedo/whatwedo-desktop-3@2x.webp 2x"
+                <source srcset="./images/whatwedo/whatwedo-desktop-3.webp 1x, 
+                ./images/whatwedo/whatwedo-desktop-3@2x.webp 2x"
                   media="(min-width: 1200px)" type="image/webp">
-                <source srcset="./images/whatwedo/whatwedo-desktop-3.jpg 1x, ./images/whatwedo/whatwedo-desktop-3@2x.jpg 2x"
+                <source srcset="./images/whatwedo/whatwedo-desktop-3.jpg 1x, 
+                ./images/whatwedo/whatwedo-desktop-3@2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <img src="./images/whatwedo/whatwedo-desktop-3.jpg" 
                 width="370" height="294" 
