--- a/index.html
+++ b/index.html
@@ -172,15 +172,14 @@
         </div>
       </section>
       <!--TEAM-->
-      <!-- <section class="section team">
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-list-item">
               <img
                 src="./images/img-team-1.jpg"
-                width="270"
-                height="260"
+                width="100%"
                 alt="Фото Игорь Демьяненко"
               />
               <div class="team-card">
@@ -235,8 +234,8 @@
             <li class="team-list-item">
               <img
                 src="./images/img-team-2.jpg"
-                width="270"
-                height="260"
+                width="100%"
+
                 alt="Фото Ольга Репина"
               />
               <div class="team-card">
@@ -291,8 +290,7 @@
             <li class="team-list-item">
               <img
                 src="./images/img-team-3.jpg"
-                width="270"
-                height="260"
+                width="100%
                 alt="Фото Николай Тарасов"
               />
               <div class="team-card">
@@ -347,8 +345,7 @@
             <li class="team-list-item">
               <img
                 src="./images/img-team-4.jpg"
-                width="270"
-                height="260"
+                width="100%"
                 alt="Фото Михаил Ермаков"
               />
               <div class="team-card">
@@ -402,7 +399,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--CLIENTS-->
       <!-- <section class="section">
         <div class="container">
