Adds adaptivity to clients section

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         </div>
       </section>
       <!--CLIENTS-->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="clients-list">
@@ -444,7 +444,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!--FOOTER-->
     <!-- <footer class="footer">
