--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
       </section>
     </main>
     <!--FOOTER-->
-    <!-- <footer class="footer">
+    <footer class="section footer">
       <div class="container">
         <div class="footer-container">
           <div class="footer-contacts">
@@ -540,7 +540,7 @@
           </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
 <!-- MODAL WINDOW --> 
     <div class="backdrop is-hidden" data-modal>
