--- a/portfolio.html
+++ b/portfolio.html
@@ -279,7 +279,7 @@
     </section>
   </main>
   <!--FOOTER-->
-    <footer class="footer">
+    <footer class="section footer">
       <div class="container">
         <div class="footer-container">
           <div class="footer-contacts">
@@ -344,6 +344,72 @@
         </div>
       </div>
     </footer>
+
+<!-- MODAL WINDOW -->
+<div class="backdrop is-hidden" data-modal>
+  <div class="modal">
+    <button type="button" class="close-btn" data-modal-close>
+      <svg width="18" height="18">
+        <use href="./images/sprite.svg#icon-cross"></use>
+      </svg>
+    </button>
+    <div class="form">
+      <h4 class="form-title">Оставьте свои данные, мы вам перезвоним</h4>
+      <form action="#" class="form-body">
+        <div class="form-item">
+          <label class="form-label">
+            Имя
+            <span class="form-field-wrapper">
+              <input type="text" name="name" class="form-input" required>
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/sprite.svg#icon-person"></use>
+              </svg>
+            </span>
+          </label>
+        </div>
+        <div class="form-item">
+          <label class="form-label">
+            Телефон
+            <span class="form-field-wrapper">
+              <input type="tel" name="tel" class="form-input">
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/sprite.svg#icon-phone"></use>
+              </svg>
+            </span>
+          </label>
+        </div>
+        <div class="form-item">
+          <label class="form-label">
+            Почта
+            <span class="form-field-wrapper">
+              <input type="email" name="email" class="form-input">
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/sprite.svg#icon-email"></use>
+              </svg>
+            </span>
+          </label>
+        </div>
+        <div class="form-item">
+          <label for="formComment" class="form-label">Комментарий</label>
+          <textarea name="comment" id="formComment" class="form-input" placeholder="Введите текст"></textarea>
+        </div>
+        <div class="form-item">
+          <div class="checkbox">
+            <label class="checkbox-label">
+              <input type="checkbox" name="toc" value="toc" class="checkbox-input" checked>
+              <span class="checkbox-custom-box"></span>
+              <span class="checkbox-text">Соглашаюсь с рассылкой и принимаю&nbsp<a href="">Условия договора</a></span>
+            </label>
+          </div>
+        </div>
+        <button type="submit" class="form-btn">Отправить</button>
+      </form>
+    </div>
+  </div>
+</div>
+<script src="./js/modal.js"></script>
+<script src="./js/menu.js"></script>
+
 </body>
 
 </html>
