Adds adaptivity to project filter in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
     </header>
   <main>
     <!--PROJECTS-->
-    <section class="projects">
+    <section class="section projects">
       <div class="container">
         <h1 hidden>Проекты</h1>
         <nav>
