Adds adaptivity to portfolio

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <img src="./images/whatwedo/whatwedo-desktop-3.jpg" 
                 width="370" height="294" 
                 alt="Человек рисует на планшете" />
- 
+              </picture>
               <h3 class="whatwedo-title">Дизайнерские решения</h3>
             </li>
           </ul>
@@ -235,7 +235,6 @@
               <img
                 src="./images/img-team-2.jpg"
                 width="100%"
-
                 alt="Фото Ольга Репина"
               />
               <div class="team-card">
@@ -290,9 +289,8 @@
             <li class="team-list-item">
               <img
                 src="./images/img-team-3.jpg"
-                width="100%
-                alt="Фото Николай Тарасов"
-              />
+                width="100%"
+                alt="Фото Николай Тарасов"/>
               <div class="team-card">
                 <h3 class="team-member">Николай Тарасов</h3>
                 <p class="position-name" lang="en">Marketing</p>
