--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
           <li class="project-container">
             <a class="project-container-link" href="">
               <div class="project-thumb">
-                <img src="./images/img-project-1.jpg" alt="Стартовая страница проекта Технокряк на ноутбуке" />
+                <img src="./images/img-project-1.jpg" width="100%" alt="Стартовая страница проекта Технокряк на ноутбуке" />
                 <div class="overlay">
                   <p class="project-description">
                     Технокряк это современная площадка распространения
