Uncheck the checkbox in modal form

--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
             <div class="form-item">
               <div class="checkbox">
                 <label class="checkbox-label">
-                  <input type="checkbox" name="toc" value="toc" class="checkbox-input" checked>
+                  <input type="checkbox" name="toc" value="toc" class="checkbox-input">
                   <span class="checkbox-custom-box"></span>
                   <span class="checkbox-text">Соглашаюсь с рассылкой и принимаю&nbsp<a href="">Условия договора</a></span>
                 </label>
